--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.32
+BrawlCrate - v0.32 Hotfix 1
 Copyright © 2018 - 2020 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,11 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.32 Hotfix 1 - (4/20/2020)
+ . Improve boot times when automatic updates are enabled
+ . Fix bug in which GLOK entries would not save properly
+ . Fix crash when duplicating GIB2 entries
  
  - BrawlCrate v0.32 - (4/19/2020)
  . Add initial support for Pathing Data found in STGDOLPIC, STGKART, and STGGREENHILL
@@ -606,7 +611,7 @@ they be held accountable for the manner in which it is used.
  . "Sub Item ID" now parsed as "Costume ID", matching BrawlBox v0.78
  . "Sort Items" now uses Ctrl+I as a shortcut
  . OpenTK updated from v1.1.0.0 to v3.0.1.0
- . Octokit updated from v0.5.2.0 to v0.32.0.0
+ . Octokit updated from v0.5.2.0 to v0.32.0.1
  . Improve general updater speed
  . Changelog window is now shown at the same time as the main window, rather than before
  . Fix bug in which settings from old versions would not upgrade properly when opening a GCT
