Prep for release

--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.33
+BrawlCrate - v0.34
 Copyright © 2018 - 2020 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,13 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.34 - (5/14/2020)
+ . Module Map files can now be placed in InternalDocumentation/Module/maps in order to load function names
+ . Add support for opening linked trophy BRRES files
+ . Add option to standardize internal trophy names to brres name
+ . Trophy TyData now uses a more optimized saving method to save some space
+ . Fix crash when converting to 50cc if stocks didn't have palettes
  
  - BrawlCrate v0.33 - (5/10/2020)
  . Add TyData parsing and editing for Stickers and Trophies
