--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.34
+BrawlCrate - v0.34 Hotfix 1
 Copyright © 2018 - 2020 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,9 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.34 - (5/14/2020)
+ . sora.map now loads correctly for main.dol
  
  - BrawlCrate v0.34 - (5/14/2020)
  . Module Map files can now be placed in InternalDocumentation/Module/maps in order to load function names
