--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.34 Hotfix 2
+BrawlCrate - v0.34 Hotfix 3
 Copyright © 2018 - 2020 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,9 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.34 Hotfix 3 - (5/15/2020)
+ . Wrappers with backcolors will now properly keep their color after selection
  
  - BrawlCrate v0.34 Hotfix 2 - (5/14/2020)
  . Function names load correctly from differing maps
