--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 
-BrawlCrate - v0.34 Hotfix 3
+BrawlCrate - v0.35 Hotfix 1
 Copyright © 2018 - 2020 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,9 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.35 Hotfix 1 - (10/17/2020)
+ . Fix bug in which TPL files would populate improperly
  
  - BrawlCrate v0.35 - (10/16/2020)
  . Adds TargetFunction string to REL Commands when loading Module Maps
