--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,5 +1,5 @@
 
-BrawlCrate - v0.39
+BrawlCrate - v0.39 Hotfix 1
 Copyright © 2018 - 2023 soopercool101, Simon381, Onium
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,9 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.39 Hotfix 1 - (2/5/2023)
+ . Fix bug in which outdated fighters lists would not necessarily update properly
  
  - BrawlCrate v0.39 - (2/5/2023)
  . P+ Knuckles has been added to the default Fighters List
