--- a/BrawlCrate/Changelog.txt
+++ b/BrawlCrate/Changelog.txt
@@ -1,6 +1,6 @@
 
-BrawlCrate - v0.41
-Copyright © 2018 - 2024 soopercool101, Simon381, Onium
+BrawlCrate - v0.42
+Copyright © 2018 - 2024 soopercool101, NuclearNecrosis, Simon381
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
 https://github.com/soopercool101/BrawlCrate
@@ -15,6 +15,21 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.42 - (3/31/2024)
+ . Update IronPython from v2.7.11 to v3.4.1
+   - Python support is now done via a localized installation, rather than userside. This will ensure plugin developers have a consistent version to work off of.
+ . Update known Item Parameters:
+   - Unknown0xC8 -> CameraFocus
+   - Unknown0xCC -> OffensiveCollisionInteraction
+   - Unknown0xD4 -> DefensiveCollisionInteraction
+ . EventMatchFighterNode: Unknown0a -> SpawnPosition
+ . EventMatchNode: UnknownFlag_40_80000000 -> DisableStarKO
+ . EventMatchNode SongID now displays as hex
+ . Fix crash when an REL object incorrectly points outside of its localized memory (Fixes crash when viewing P+ Bowser's module)
+ . Fix regression in which UserEntries would not load properly
+ . Fix bug in which UV viewer would display off by a pixel
+ . Add new easter egg
  
  - BrawlCrate v0.41 - (2/6/2024)
  . Vastly improve subspace BLOC parsing:
